# flaps

./: Makefile.am  PACKAGES  Profile  README  README.md  configure.ac  header  release.yml
.github/workflows/: release.yml
demo/: Makefile.am  bif.fp  configure.ac  contour.fp  contour.op4  contour.uf  controls.fp  dlm.fp  flut10.fp  flut12.fp  flut12.op4  flut13.fp  flut8.op4  gaf.fp  gaf.op4  gc.fp  goland.fp  ha145b.op4  latent.fp  lco.fp  lco.op4  lco.uf  lco_rbm.op4  lco_rbm.uf  lti1.fp  nac.fp  nac.op4  nacpv.fp  nl.fp  nl1.fp  nl2.fp  nl3.fp  nl4.fp  nl5.fp  optimize.fp  pv.fp  reduction.fp  reed.fp  run  soe.fp  (+12 more)
src/: Makefile.am  configure.ac
src/doc/: Makefile.admin  Makefile.am  configure.ac  flaps.bib  flaps.sty  manual.tex  manual.words  summary
src/doc/bib/: Makefile  README  flaps.bib
src/doc/figures/: Makefile.am  UFformat  beta.fig  bif.fig  bilinear-force.apf  bilinear-force.fig  bma_modes.eps  bma_modes.fig  bmodes.eps  bmodes.fig  cms.eps  cms.fig  cms_modes.eps  cms_modes.fig  configure.ac  contour_start.fig  contour_struct.fig  controls-vso22-23.fig  coords.fig  df.fig  dlm.fig  freeplay.apf  freeplay.fig  gaf1.fig  gaf2.fig  gap-force.apf  gap-force.fig  gap.fig  gapGamma.fig  globalcs.fig  goland-vso.fig  goland.fig  gyro.fig  ha145b.fig  lti-block.eps  lti-block.fig  lti-example.eps  lti-example.fig  lti-schematic.eps  lti-schematic.fig  (+14 more)
src/doc/figures/flut10/: contour.fig  opt.fig  pv.fig  vso.fig
src/doc/figures/p14n-g-f-ia/: p14n-g-f-ia
src/doc/figures/vso2d/: notes  so.fig  vo.fig  vo.fig.bak  vs.fig  vso.apf  vso2d.fig  vso2d.fig.bak
src/doc/markdown/: README.md
src/doc/notes/: caroline  design.tex  dev-packages  fig_notes  github.txt  newcomputer  valgrind  version  xfig
src/doc/notes/sdsu/: Makefile  outline  slides.tex  slides.words
src/lib/: Ad.cpp  Ad.h  Curve.cpp  Curve.h  Makefile.am  ObjectCounter.h  Par.cpp  Par.h  Pz.cpp  Pz.h  Regex.cpp  Regex.h  Stack.cpp  Stack.h  adeqn.cpp  adeqn.h  atmos.cpp  atmos.h  blas.cpp  blas.h  configure.ac  conv.h  csignals.cpp  csignals.h  custom.cpp  custom.h  custompz_proto.cpp  delaunay.cpp  df.cpp  df.h  einspline.cpp  einspline.h  exim.cpp  exim.h  extract.h  fio.cpp  fio.h  fma.cpp  fma.h  fptype.cpp  (+44 more)
src/scripts/: Makefile.am  addheader  biggest  bootstrap  cgrep  changeversion  checkVersion  cleanout  configure.ac  diffmm  dog  fclean  fig2pdf  findlink  fkill  flapsLog  flapstest.sh  fold.sh  gyroeig.m  hidden  hogs  hopfpt.m  kind  ldpackage  lines  linked  lspath  memmapfile.m  mgrep  mklinks  mmdiff.m  motd  nodot  optfcn.m  perffix  rename  rmtrace  spy  targets  tbig  (+4 more)
